# colocviu-poo-2020

./: CMakeLists.txt  Interfata.cpp  Interfata.h  main.cpp
business/: Achizitie.cpp  Achizitie.h  Producator.cpp  Producator.h
produs/: Produs.h
produs/dezinfectant/: Dezinfectant.cpp  Dezinfectant.h  DezinfectantBacterii.cpp  DezinfectantBacterii.h  DezinfectantFungi.cpp  DezinfectantFungi.h  DezinfectantVirusuri.cpp  DezinfectantVirusuri.h
produs/masca/: Masca.cpp  Masca.h  MascaChirurgicala.cpp  MascaChirurgicala.h  MascaPolicarbonat.cpp  MascaPolicarbonat.h
