cmake_minimum_required(VERSION 3.19)
project(colocviu_poo_2020)

set(CMAKE_CXX_STANDARD 14)

add_executable(colocviu_poo_2020 main.cpp produs/masca/MascaChirurgicala.cpp produs/masca/MascaChirurgicala.h produs/masca/Masca.cpp produs/masca/Masca.h produs/masca/MascaPolicarbonat.cpp produs/masca/MascaPolicarbonat.h business/Producator.cpp business/Producator.h Interfata.cpp Interfata.h produs/dezinfectant/Dezinfectant.cpp produs/dezinfectant/Dezinfectant.h produs/dezinfectant/DezinfectantBacterii.cpp produs/dezinfectant/DezinfectantBacterii.h business/Achizitie.cpp business/Achizitie.h produs/Produs.cpp produs/Produs.h produs/dezinfectant/DezinfectantVirusuri.cpp produs/dezinfectant/DezinfectantVirusuri.h produs/dezinfectant/DezinfectantFungi.cpp produs/dezinfectant/DezinfectantFungi.h)